ai模块重构